test/spec_vectors/simd_f64x2_cmp/fail/module_19.wat
(module (func $f64x2.le-1st-arg-empty (result v128) (f64x2.le (v128.const f64x2 0 0))))